--- a/packages/scss/src/components/checkbox/states.scss
+++ b/packages/scss/src/components/checkbox/states.scss
@@ -7,7 +7,7 @@
 		cursor: default;
 
 		&::before {
-			box-shadow: inset 0 0 0 var(--components-checkbox-input-border-width) var(--palettes-neutral-500);
+			border: var(--components-checkbox-input-border-width) solid var(--palettes-neutral-500);
 		}
 
 		.checkbox-label-helper {
@@ -19,7 +19,7 @@
 		&::before {
 			color: var(--palettes-neutral-500);
 			background-color: var(--palettes-neutral-100);
-			box-shadow: inset 0 0 0 var(--components-checkbox-input-border-width) var(--palettes-neutral-100);
+			border: var(--components-checkbox-input-border-width) solid var(--palettes-neutral-100);
 		}
 	}
 }
